--- a/client/package.json
+++ b/client/package.json
@@ -1,14 +1,15 @@
 {
   "name": "mern",
   "version": "0.1.0",
+  "description": "Mern Demo",
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^2.1.1"
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -23,3 +24,4 @@
     "not op_mini all"
   ]
 }
+
